# api/server/controllers/Explorer.js
@@ -57,6 +57,17 @@ module.exports.getOperatorStats = function getOperatorStats (req, res, next) {
     });
 };
 
+module.exports.getSlotById = function getSlotById (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Explorer.getSlotById(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (err) {
+      onError(err, req, res);
+    });
+};
+
 module.exports.getStats = function getStats (req, res, next) {
   Explorer.getStats()
     .then(function (response) {
@@ -82,9 +93,8 @@ module.exports.getTransactions = function getTransactions (req, res, next) {
   var address = req.swagger.params['address'].value;
   var from = req.swagger.params['from'].value;
   var to = req.swagger.params['to'].value;
-  var block = req.swagger.params['block'].value;
-  var fromId = req.swagger.params['fromId'].value;
-  Explorer.getTransactions(address,from,to,block,fromId)
+  var fromBatch = req.swagger.params['fromBatch'].value;
+  Explorer.getTransactions(address,from,to,fromBatch)
     .then(function (response) {
       utils.writeJson(res, response);
     })
