# api/server/service/ExplorerService.js
@@ -152,6 +152,44 @@ exports.getOperatorStats = function() {
 
 
 /**
+ * Get a specific slot.
+ * Returns the slot identified by id.
+ *
+ * id slotId ID of the slot to return
+ * returns slot
+ **/
+exports.getSlotById = function(id) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+      "id" : "0x5556B50a2cbAbA54Ec6426065223B652b8b39133",
+      "batches" : [ {
+        "id" : "0x0000050a2cbAbA54Ec6426065223B652b8b39133",
+        "operatorId" : "0x0000000000bAbA54Ec6426065223B652b8b39133",
+        "transactions" : [ {
+          "id" : "0x1116B50a2cbAbA54Ec6426065223B652b8b39133",
+          "from" : "0xaAa6B50a2cbAbA54Ec6426065223B652b8b39133",
+          "to" : "0xbBb6B50a2cbAbA54Ec6426065223B652b8b39133",
+          "tokenId" : "0xcCc6B50a2cbAbA54Ec6426065223B652b8b39133",
+          "ammount" : 133,
+          "fee" : 2
+        } ],
+        "slotId" : "0x5556B50a2cbAbA54Ec6426065223B652b8b39133",
+        "eraId" : "0x6666B50a2cbAbA54Ec6426065223B652b8b39133"
+      } ],
+      "eraId" : "0x6666B50a2cbAbA54Ec6426065223B652b8b39133"
+    };
+    // RETURNING A MOCKUP, NOT IMPLEMENTED YET
+    reject({
+      notImplemented: true,
+      mockup: examples[Object.keys(examples)[0]]
+    })
+    // return resolve(answer);
+  });
+}
+
+
+/**
  * Get general metrics of the rollup.
  * Returns various statistics that refelct the state of the rollup
  *
@@ -233,6 +271,7 @@ exports.getTransactionById = function(id) {
       mockup: examples[Object.keys(examples)[0]]
     })
     // return resolve(answer);
+  });
 }
 
 
@@ -240,14 +279,13 @@ exports.getTransactionById = function(id) {
  * Query for transactions.
  * Returns an array of transactions based on the query parameters. If no parameter are porvided, this endpoint will return the most recent transactions.
  *
- * address bigInt If this parameter is porvided, all the returned transactions will have this value as sender or receiver. (optional)
- * from bigInt If this parameter is porvided, all the returned transactions will have this value as sender. (optional)
- * to bigInt If this parameter is porvided, all the returned transactions will have this value as receiver. (optional)
- * block bigInt If this parameter is porvided, all the returned transactions will have this value as block id. (optional)
- * fromId bigInt If this parameter is porvided, all the returned transactions will be previous to the the transaction identified by the provided value. Use to retrieve older transactions that were not included in a query, as in pagination. (optional)
+ * address address If this parameter is porvided, all the returned transactions will have this value as sender or receiver. (optional)
+ * from address If this parameter is porvided, all the returned transactions will have this value as sender. (optional)
+ * to address If this parameter is porvided, all the returned transactions will have this value as receiver. (optional)
+ * fromBatch batchId If this parameter is porvided, all the returned transactions will have been mined in the indicated batch (fromBatch) or older batches. Use to retrieve older transactions that were not included in a query, as in pagination. (optional)
  * returns transactions
  **/
-exports.getTransactions = function(address,from,to,block,fromId) {
+exports.getTransactions = function(address,from,to,fromBatch) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
@@ -264,12 +302,12 @@ exports.getTransactions = function(address,from,to,block,fromId) {
       "tokenId" : "0xDDD6B50a2cbAbA54Ec6426065223B652b8b39133",
       "ammount" : 133,
       "fee" : 2
-    }
-  ];
-  // RETURNING A MOCKUP, NOT IMPLEMENTED YET
-  reject({
-    notImplemented: true,
-    mockup: examples[Object.keys(examples)[0]]
-  })
-  // return resolve(answer);
-})
+    }];
+    // RETURNING A MOCKUP, NOT IMPLEMENTED YET
+    reject({
+      notImplemented: true,
+      mockup: examples[Object.keys(examples)[0]]
+    })
+    // return resolve(answer);
+  });
+}
